--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -3,8 +3,8 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="commentModalLabel">Comments</h5>
-        <button aria-label="Close" class="close" (click)="closeModal()" type="button">
+        <h5 class="modal-title" id="commentModalLabel">{{'comments' | translate}}</h5>
+        <button (click)="closeModal()" aria-label="Close" class="close" type="button">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -19,7 +19,8 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button (click)="closeModal()" class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+        <button (click)="closeModal()" class="btn btn-secondary" data-dismiss="modal"
+                type="button">{{'close' | translate}}</button>
       </div>
     </div>
   </div>
